can't figure out the footer page two

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
 
   
 <section class="hero-head secondpage slogan animated fadeIn" id="secondpageclick">
+    <section class="hero-body">
         <div class="container" id="secondpagecontainer">
                     <div class="columns">
                             <div class="column is-auto">
@@ -94,7 +95,7 @@
                                         <br> The Free Spirited.
                                     </p>
                             </div>
-        </div>
+                        </div>
  <div class="columns" style="margin-top: 500px;">
     <div class="column about is-one-third" style="height: 500px;">
          </div>
@@ -123,7 +124,7 @@
                  <p class="rustic is-size-2">
                                     Our Mission
                 </p>
-                  <p class="aboutmissionlorem maintext">
+                                    <p class="aboutmissionlorem maintext">
                                     Our mission at Rustic Coffeehouse is to offer you a unique experience
                                     in your everyday life. There is no coffee like Rustic Coffeehouse coffee.
                                     We strive to be vegan gluten free friendly and organic without plastic straws.
@@ -133,14 +134,14 @@
                                     <br>
                                     <a class="button is-light is-small"> Mugs </a>
                                     <!--check out our mug selection-->
-                  </p>
+                                    </p>
 
-                 
                 </div>
-                <div class ="column promise is-one-third" style="height: 500px;">
-                  </div>
+                <div class ="column promise is-one-third" style="height: 500px;"></div>
+
                     </div>
-                </div>
+                </div> <!--containerdiv-->
+                </section>
             </section>
             
 
